@@ -34,13 +34,16 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
-group 'org.apache.cassandra'
+group = 'org.apache.cassandra'
 
-sourceCompatibility = 11
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
 
 application {
     applicationName = "cassandra-easy-stress"
-    mainClassName = "org.apache.cassandra.easystress.MainKt"
+    mainClass = "org.apache.cassandra.easystress.MainKt"
 }
 
 repositories {
@@ -110,6 +113,7 @@ dependencies {
     // Test dependencies
     testImplementation libs.junit.jupiter.engine
     testImplementation libs.junit.jupiter.params
+    testRuntimeOnly libs.junit.platform.launcher
     testImplementation libs.assertj.core
     testImplementation libs.kotlin.test.junit
     testImplementation libs.mockk
@@ -121,10 +125,10 @@ dependencies {
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = JavaVersion.VERSION_11
+    kotlinOptions.jvmTarget = JavaVersion.VERSION_21
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = JavaVersion.VERSION_11
+    kotlinOptions.jvmTarget = JavaVersion.VERSION_21
 }
 
 sourceSets {
@@ -229,30 +233,37 @@ jib {
         tags = ["latest"]
     }
     from {
-        image = "eclipse-temurin:17-jre"
+        image = "eclipse-temurin:21-jre"
+    }
+    container {
+        // Generational ZGC by default; override at "docker run" time with
+        // -e JAVA_TOOL_OPTIONS="..." to select a different collector.
+        environment = [
+            "JAVA_TOOL_OPTIONS": "-XX:+UseZGC -XX:+ZGenerational"
+        ]
     }
 }
 
 ospackage {
     os = LINUX
     link("/usr/local/bin/cassandra-easy-stress", "/opt/cassandra-easy-stress/bin/cassandra-easy-stress" )
-    packager "Jon Haddad"
-    maintainer "Jon Haddad"
-    vendor "Rustyrazorblade Consulting"
-    url "http://rustyrazorblade.com/cassandra-easy-stress/"
-    license "Apache License 2.0"
-    description "Stress Tool for Apache Cassandra by Rustyrazorblade Consulting"
+    packager = "Jon Haddad"
+    maintainer = "Jon Haddad"
+    vendor = "Rustyrazorblade Consulting"
+    url = "http://rustyrazorblade.com/cassandra-easy-stress/"
+    license = "Apache License 2.0"
+    description = "Stress Tool for Apache Cassandra by Rustyrazorblade Consulting"
 }
 
 buildDeb {
-    distribution "weezy,bionic,xenial,jessie"
-    requires("openjdk-8-jre")
+    distribution = "weezy,bionic,xenial,jessie"
+    requires("openjdk-21-jre")
     group = "build"
 }
 
 buildRpm {
-    requires("java-1.8.0-openjdk")
-    user "root"
+    requires("java-21-openjdk")
+    user = "root"
     group = "build"
 }
 
@@ -270,17 +281,22 @@ tasks.distTar {
 
 assemble.mustRunAfter clean
 
-applicationDistribution.from("LICENSE.txt") {
-    into ""
+distributions {
+    main {
+        contents {
+            from("LICENSE.txt") {
+                into ""
+            }
+        }
+    }
 }
 
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
 }
-targetCompatibility = JavaVersion.VERSION_11
 
 detekt {
-    toolVersion = "1.23.7"
+    toolVersion = "1.23.8"
     source = files("src/main/kotlin", "src/test/kotlin")
     parallel = true
     config = files("$projectDir/detekt-config.yml")
@@ -294,4 +310,11 @@ detekt {
     ignoredFlavors = ["production"]
     ignoredVariants = ["productionRelease"]
     autoCorrect = false
+}
+
+tasks.withType(io.gitlab.arturbosch.detekt.Detekt).configureEach {
+    jvmTarget = "21"
+}
+tasks.withType(io.gitlab.arturbosch.detekt.DetektCreateBaselineTask).configureEach {
+    jvmTarget = "21"
 }
